<resources>




    <string name="app_name">ALC 4.0</string>
    <string name="welcome_message">Welcome to ALC 4.0</string>
    <string name="title_activity_about__alc_">About ALC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--<string name="title_activity_about__alc">About ALC</string>-->

    <string name="display_divider">Divider</string>
    <string name="andela_logo">Andela Logo</string>
    

    <string name="notification_error_ssl_cert_invalid">Error SSL certificate is invalid! Do you want to continue?</string>
    <string name="slackUsernameValue">\@johndoe</string>
    <string name="slack_username_label">Slack Username:</string>
    <string name="phone_number_label">25471234589</string>
    <string name="phone_label">Phone:</string>
    <string name="email_value">johndoe@gmail.com</string>
    <string name="email_label">Email:</string>
    <string name="country_value">Kenya</string>
    <string name="country_label">Country:</string>
    <string name="track_value">android</string>
    <string name="track_label">Track:</string>
    <string name="user_title_name">John Doe</string>
    <string name="my_profile_btn_text">MY PROFILE</string>
    <string name="about_alc_text">ABOUT ALC</string>
    <string name="title_activity_main2">ALC4profile</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_delete">Delete</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
</resources>
